--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="https://kit.fontawesome.com/694efd35c6.js" crossorigin="anonymous"></script> <!--FuenteIconos-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="css/estilos.css"><!--Importante SIEMPRE al final del css de Bootstrap-->
 </head>
 
@@ -44,14 +45,14 @@
     </nav>
 
 
-    <section class="container sectionLogo col-xl-6 col-md-8 col-xs-10">
+    <section class="col-xl-8 col-md-8 col-xs-10">
 
-        <div class="imagenLogo d-flex justify-content-center p-3">
-            <img src="/img/daft-punk-logo.png" class="img-fluid" alt="logo daft punk">
+        <div class="efecto-glitch d-flex  justify-content-center p-3">
+            <img src="/img/daft-punk-logo.png" class="img-fluid imagenLogo" alt="logo daft punk">
         </div>
 
-        <div class="d-flex text-lg-center p-5">
-            <p class="h5">
+        <div class="d-flex justify-content-center text-center p-5">
+            <p class="infoBanda animate__animated animate__flash">
                 Daft Punk es un dúo de música electrónica formado por los músicos franceses Guy-Manuel de
                 Homem-Christo
                 (n. 1974) y Thomas Bangalter (n. 1975). Daft Punk alcanzó una gran popularidad en el estilo house a
@@ -71,7 +72,7 @@
             </p>
         </div>
         <div class="d-flex justify-content-center mb-3">
-            <img src="/img/getLucky.png" class="img-fluid" alt="logo daft punk">
+            <img src="/img/getLucky.png" class="img-fluid getLucky" alt="logo daft punk">
         </div>
 
     </section>
@@ -80,13 +81,13 @@
         <footer>
             <div class="text-center p-3">
                 <a href="https://open.spotify.com/artist/4tZwfgrHOc3mvqYlEYSvVi"><i
-                        class="fa-brands fa-spotify"></i></a>
-                <a href="https://www.coderhouse.com/"><i class="fa-solid fa-graduation-cap"></i></a>
+                        class="fa-brands fa-spotify p-3"></i></a>
+                <a href="https://www.coderhouse.com/ p-3"><i class="fa-solid fa-graduation-cap"></i></a>
                 <a href="https://www.youtube.com/channel/UCeFRG6700bzqYI0M_9vyelw/videos"><i
-                        class="fa-brands fa-youtube"></i></a>
+                        class="fa-brands fa-youtube p-3"></i></a>
             </div>
             <!-- Copyright -->
-            <div class="text-center p-3 border-2 bottom-0";">
+            <div class="text-center p-3 border-2 bottom-0" ;">
                 © 2022 Copyright:
                 <a href="https://www.coderhouse.com/">Lucas J Vargas</a>
             </div>
