--- a/paginas/conciertos.html
+++ b/paginas/conciertos.html
@@ -9,6 +9,7 @@
     <script src="https://kit.fontawesome.com/694efd35c6.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="/css/estilos.css">
 </head>
 
@@ -45,11 +46,15 @@
         </nav>
 
         <section class="col-xl-6 col-md-8 col-xs-10">
-            <div class="container h4 text-light text-center p-5">
+            <div class="text-center p-4">
                 <h2>Tour Mundial 2023</h2>
-                <p>Enterate de los nuevos conciertos:</p>
+            </div>
+            <div class="container text-light text-center p-2">
+                                <div>
+                    <h4 class="animate__animated animate__bounce">Enterate de los nuevos conciertos</h4>
+                </div>
                 <div>
-                    <table class="d-flex justify-content-center text-light">
+                    <table class="d-flex h5 justify-content-center">
                         <tbody>
                             <tr>
                                 <td>30.03</td>
@@ -126,13 +131,13 @@
             <footer>
                 <div class="text-center p-3">
                     <a href="https://open.spotify.com/artist/4tZwfgrHOc3mvqYlEYSvVi"><i
-                            class="fa-brands fa-spotify"></i></a>
-                    <a href="https://www.coderhouse.com/"><i class="fa-solid fa-graduation-cap"></i></a>
+                            class="fa-brands fa-spotify p-3"></i></a>
+                    <a href="https://www.coderhouse.com/ p-3"><i class="fa-solid fa-graduation-cap"></i></a>
                     <a href="https://www.youtube.com/channel/UCeFRG6700bzqYI0M_9vyelw/videos"><i
-                            class="fa-brands fa-youtube"></i></a>
+                            class="fa-brands fa-youtube p-3"></i></a>
                 </div>
                 <!-- Copyright -->
-                <div class="text-center p-3 border-2 bottom-0";">
+                <div class="text-center p-3 border-2 bottom-0" ;">
                     © 2022 Copyright:
                     <a href="https://www.coderhouse.com/">Lucas J Vargas</a>
                 </div>
