--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -9,6 +9,7 @@
     <script src="https://kit.fontawesome.com/694efd35c6.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="/css/estilos.css">
 </head>
 
@@ -44,20 +45,18 @@
         </nav>
 
         <section class="container col-8">
-
+            <div class="text-center p-4">
+                <h2>Contactate con nosotros</h2>
+            </div>
             <section class="row p-4 m-auto">
-
                 <div class="container">
-                    <div class="row">
-
-
-                        <div class="container d-flex justify-content-center col-xl-6 col-md-8 col-xs-10">
+                    <div id="contactanos" class="row">
+                        <div class="container d-flex justify-content-center col-6">
                             <div>
-                                <p>
-                                    Si te gustó nuestra pagina, por favor deja un comentario y suscribete.
+                                <p class="text-center animate__animated animate__pulse comentarioSus">
+                                    Si te gustó nuestra pagina, por favor dejanos un comentario y suscribete.
                                 </p>
-
-                                <form class="text-light ">
+                                <form class="text-light">
                                     <div class="mb-3 mt-3">
                                         <label for="email" class="form-label">Email:</label>
                                         <input type="email" class="form-control" id="email"
@@ -74,23 +73,24 @@
                                     </div>
                                     <div class="form-check mb-3 mt-1">
                                         <label class="form-check-label">
-                                            <input class="form-check-input" type="checkbox" name="suscriba"> obtener
-                                            información
-                                            sobre nuevos conciertos.
+                                            <input class="form-check-input" type="checkbox" name="suscriba"> Suscribete!
                                         </label>
                                     </div>
-                                    <button type="submit" class="btn btn-dark ">Submit</button>
+                                    <div class="text-center">
+                                        <button type="submit"
+                                            class="btn btn-dark animate__animated animate__bounceIn">Enviar</button>
+                                    </div>
                                 </form>
                             </div>
                         </div>
 
-                        <div class="container text-center col-xl-6 col-md-8 col-xs-10 h3 ">
-                            <p class="p-4">Encuentranos en:</p>
+                        <div class="container text-center col-6 h3 ">
+                            <p class="p-4 animate__animated animate__flash h5 nosUbicamos">Nos ubicamos en:</p>
                             <div class="">
                                 <iframe
                                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7858.137907643805!2d-59.02952006493742!3d-34.09667752322532!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bb0b6886fb22e9%3A0xe2b7335180abf4c1!2sPlaza%20Mitre!5e0!3m2!1ses-419!2sar!4v1672062707810!5m2!1ses-419!2sar"
-                                    class="embed-responsive-item" width="300" height="300" style="border:0;"
-                                    allowfullscreen="" loading="lazy"
+                                    class="embed-responsive-item img-fluid" width="300" height="300"
+                                    style="border: 3px;" allowfullscreen="" loading="lazy"
                                     referrerpolicy="no-referrer-when-downgrade "></iframe>
                             </div>
                         </div>
@@ -103,20 +103,19 @@
             <footer>
                 <div class="text-center p-3">
                     <a href="https://open.spotify.com/artist/4tZwfgrHOc3mvqYlEYSvVi"><i
-                            class="fa-brands fa-spotify"></i></a>
-                    <a href="https://www.coderhouse.com/"><i class="fa-solid fa-graduation-cap"></i></a>
+                            class="fa-brands fa-spotify p-3"></i></a>
+                    <a href="https://www.coderhouse.com/ p-3"><i class="fa-solid fa-graduation-cap"></i></a>
                     <a href="https://www.youtube.com/channel/UCeFRG6700bzqYI0M_9vyelw/videos"><i
-                            class="fa-brands fa-youtube"></i></a>
+                            class="fa-brands fa-youtube p-3"></i></a>
                 </div>
                 <!-- Copyright -->
-                <div class="text-center p-3 border-2 bottom-0";">
+                <div class="text-center p-3 border-2 bottom-0" ;">
                     © 2022 Copyright:
                     <a href="https://www.coderhouse.com/">Lucas J Vargas</a>
                 </div>
                 <!-- Copyright -->
             </footer>
         </section>
-
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
