--- a/paginas/discografia.html
+++ b/paginas/discografia.html
@@ -9,6 +9,7 @@
     <script src="https://kit.fontawesome.com/694efd35c6.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="/css/estilos.css">
 </head>
 
@@ -43,8 +44,11 @@
             </div>
         </nav>
 
-        <section class="col-xl-10 col-md-8 col-xs-8">
-            <section class="container">
+        <section class="col-12">
+            <div class="text-center p-4">
+                <h2>Daft Punk Discografía</h2>
+            </div>
+            <section id="albums" class="container">
                 <div class="row mt-5">
                     <li class="col-md-4"><iframe style="border-radius:12px"
                             src="https://open.spotify.com/embed/album/4m2880jivSbbyEGAKfITCa?utm_source=generator&theme=0"
@@ -65,9 +69,10 @@
                             loading="lazy"></iframe></li>
 
                 </div>
+
                 <div class="row mt-2">
 
-                    <li class="col-md-4"><iframe style="border-radius:12px"
+                    <li class="col-md-4 m-auto"><iframe style="border-radius:12px"
                             src="https://open.spotify.com/embed/album/2T7DdrOvsqOqU9bGTkjBYu?utm_source=generator&theme=0"
                             width="100%" height="352" frameBorder="0" allowfullscreen=""
                             allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
@@ -93,13 +98,13 @@
             <footer>
                 <div class="text-center p-3">
                     <a href="https://open.spotify.com/artist/4tZwfgrHOc3mvqYlEYSvVi"><i
-                            class="fa-brands fa-spotify"></i></a>
-                    <a href="https://www.coderhouse.com/"><i class="fa-solid fa-graduation-cap"></i></a>
+                            class="fa-brands fa-spotify p-3"></i></a>
+                    <a href="https://www.coderhouse.com/ p-3"><i class="fa-solid fa-graduation-cap"></i></a>
                     <a href="https://www.youtube.com/channel/UCeFRG6700bzqYI0M_9vyelw/videos"><i
-                            class="fa-brands fa-youtube"></i></a>
+                            class="fa-brands fa-youtube p-3"></i></a>
                 </div>
                 <!-- Copyright -->
-                <div class="text-center p-3 border-2 bottom-0";">
+                <div class="text-center p-3 border-2 bottom-0" ;">
                     © 2022 Copyright:
                     <a href="https://www.coderhouse.com/">Lucas J Vargas</a>
                 </div>
