--- a/paginas/galeria.html
+++ b/paginas/galeria.html
@@ -9,12 +9,13 @@
     <script src="https://kit.fontawesome.com/694efd35c6.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="/css/estilos.css">
 
 </head>
 
 <body>
-    <section class="row d-flex justify-content-center">
+    <section>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <a class="navbar-brand p-2" href="#">Daft Punk</a>
@@ -43,46 +44,59 @@
                 </div>
             </div>
         </nav>
-
-        <section class="container-fluid col-10 imgGaleria">
-
-            <div class="row mt-4 gap-3 gap-md-0">
-                <img class="img-fluid col-md-4 " src="/img/daft-punk-gallery0.jpg" alt="daft-punk-gallery00">
-                <img class="img-fluid col-md-4" src="/img/daft-punk-gallery1.jpg" alt="daft-punk-gallery01">
-                <img class="img-fluid col-md-4" src="/img/daft-punk-gallery2.jpg" alt="daft-punk-gallery02">
+    </section>
+    <section class="container">
+        <div class="text-center p-4">
+            <h2>Daft Punk Galeria</h2>
+        </div>
+        <div class="grid-row">
+            <div class="grid-item mt-3">
+                <img src="/img/daft-punk-gallery0.jpg" alt="daft-punk-imagen" />
+            </div>
+            <div class="grid-item">
+                <img src="/img/daft-punk-gallery1.jpg" alt="daft-punk-imagen" />
+            </div>
+            <div class="grid-item">
+                <img src="/img/daft-punk-gallery2.jpg" alt="daft-punk-imagen" />
+            </div>
+            <div class="grid-item">
+                <img src="/img/daft-punk-gallery3.jpg" alt="daft-punk-imagen" />
+            </div>
+            <div class="grid-item">
+                <img src="/img/daft-punk-gallery4.jpg" alt="daft-punk-imagen" />
+            </div>
+            <div class="grid-item">
+                <img src="/img/daft-punk-gallery5.jpg" alt="daft-punk-imagen" />
+            </div>
+            <div class="grid-item">
+                <img src="/img/daft-punk-gallery6.jpg" alt="daft-punk-imagen" />
+            </div>
+            <div class="grid-item">
+                <img src="/img/daft-punk-gallery7.jpg" alt="daft-punk-imagen" />
+            </div>
+            <div class="grid-item mb-3">
+                <img src="/img/daft-punk-gallery8.jpg" alt="daft-punk-imagen" />
             </div>
 
-            <div class="row mt-4 gap-3 gap-md-0">
-                <img class="img-fluid col-md-4" src="/img/daft-punk-gallery3.jpg" alt="daft-punk-gallery03">
-                <img class="img-fluid col-md-4" src="/img/daft-punk-gallery4.jpg" alt="daft-punk-gallery04">
-                <img class="img-fluid col-md-4" src="/img/daft-punk-gallery5.jpg" alt="daft-punk-gallery05">
+        </div>
+    </section>
+    <section>
+        <footer>
+            <div class="text-center p-3">
+                <a href="https://open.spotify.com/artist/4tZwfgrHOc3mvqYlEYSvVi"><i
+                        class="fa-brands fa-spotify p-3"></i></a>
+                <a href="https://www.coderhouse.com/ p-3"><i class="fa-solid fa-graduation-cap"></i></a>
+                <a href="https://www.youtube.com/channel/UCeFRG6700bzqYI0M_9vyelw/videos"><i
+                        class="fa-brands fa-youtube p-3"></i></a>
             </div>
-
-            <div class="row mt-4 gap-3 gap-md-0 mb-4">
-                <img class="img-fluid col-md-4" src="/img/daft-punk-gallery6.jpg" alt="daft-punk-gallery06">
-                <img class="img-fluid col-md-4" src="/img/daft-punk-gallery7.jpg" alt="daft-punk-gallery07">
-                <img class="img-fluid col-md-4" src="/img/daft-punk-gallery8.jpg" alt="daft-punk-gallery08">
+            <!-- Copyright -->
+            <div class="text-center p-3 border-2 bottom-0" ;">
+                © 2022 Copyright:
+                <a href="https://www.coderhouse.com/">Lucas J Vargas</a>
             </div>
-
-        </section>
-
-        <section>
-            <footer>
-                <div class="text-center p-3">
-                    <a href="https://open.spotify.com/artist/4tZwfgrHOc3mvqYlEYSvVi"><i
-                            class="fa-brands fa-spotify"></i></a>
-                    <a href="https://www.coderhouse.com/"><i class="fa-solid fa-graduation-cap"></i></a>
-                    <a href="https://www.youtube.com/channel/UCeFRG6700bzqYI0M_9vyelw/videos"><i
-                            class="fa-brands fa-youtube"></i></a>
-                </div>
-                <!-- Copyright -->
-                <div class="text-center p-3 border-2 bottom-0";">
-                    © 2022 Copyright:
-                    <a href="https://www.coderhouse.com/">Lucas J Vargas</a>
-                </div>
-                <!-- Copyright -->
-            </footer>
-        </section>
+            <!-- Copyright -->
+        </footer>
+    </section>
 
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
